# fastllm_npu

./: CMakeLists.txt  README.md
include/: fastllm.h
include/devices/npu/: ascenddevice.h  fastllm-ascend.h
src/: executor.cpp  fastllm.cpp
src/devices/npu/: ascenddevice.cpp  fastllm-ascend.cpp  fastllm-ascend_bk.cpp  fastllm-ascend_simple.cpp
test/: cann.sh
test/ascend_one/: CMakeLists.txt  cppOps.cpp
test/ops/: CMakeLists.txt  cppOps.cpp  test.txt  test_npu.cpp  test_npu_eb_repeat.cpp  test_npu_quant.cpp  test_npu_rmsnorm.cpp  test_npu_simple.cpp  test_npu_swiglu_softmax.cpp
